--- a/WebMVCApplKamPublic/Views/Home/Index.cshtml
+++ b/WebMVCApplKamPublic/Views/Home/Index.cshtml
@@ -2,7 +2,16 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+<div class="col-lg-12 mx-auto pt-0 p-0">
+    <div class="text-center">
+        <h1 class="display-4">Welcome</h1>
+        <p>This is my webside .</p>
+
+        <p>This page contains no text yet. </p>
+
+    </div>
 </div>
+
+
+
