--- a/WebMVCApplKamPublic/Views/_ViewImports.cshtml
+++ b/WebMVCApplKamPublic/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using WebMVCApplKamPublic
 @using WebMVCApplKamPublic.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, WebMVCApplKamPublic
