Dokončení oprav a úprav aplikace seznamu osob

--- a/WebMVCApplKamPublic/Views/Home/Index.cshtml
+++ b/WebMVCApplKamPublic/Views/Home/Index.cshtml
@@ -6,9 +6,11 @@
 <div class="col-lg-12 mx-auto pt-0 p-0">
     <div class="text-center">
         <h1 class="display-4">Welcome</h1>
-        <p>This is my webside .</p>
+        <p>This is my website.</p>
 
         <p>This page contains no text yet. </p>
+
+        <p><strong>Go to the list of people tab!</strong></p>
 
     </div>
 </div>
