--- a/WebMVCApplKamPublic/Views/Home/Privacy.cshtml
+++ b/WebMVCApplKamPublic/Views/Home/Privacy.cshtml
@@ -6,3 +6,4 @@
 <p>Use this page to detail your site's privacy policy.</p>
 
 
+<p>Tato stránka je zde v tuto chvíli zbytečná, ale je zde ponechána, aby aplikace vypadala lépe.</p>
