--- a/WebMVCApplKamPublic/Views/Persons/Delete.cshtml
+++ b/WebMVCApplKamPublic/Views/Persons/Delete.cshtml
@@ -8,7 +8,7 @@
     <form asp-action="Delete">
         <div class="border p-3 mt-4">
             <div class="row pb-2">
-            <div class="card-header bg-danger text-uppercase text-white text-center mb-2 pt-0" style="height:25px;">
+            <div class="card-header bg-danger text-white text-center mb-2 pt-0" style="height:25px;">
                 <h4>Person - Delete</h4>
                 <h4 class="text-danger">Opravdu chcete vymazat záznam? / Are you sure you want to delete the record of "@Model.Name?"</h4>
             </div>
