--- a/WebMVCApplKamPublic/Views/Persons/Edit.cshtml
+++ b/WebMVCApplKamPublic/Views/Persons/Edit.cshtml
@@ -6,8 +6,8 @@
 
 <div class="col-11 mx-auto pt-0 p-0">
 <div class="card">
-    <div class="card-header bg-danger text-uppercase text-white text-center mb-2 pt-0" style="height:25px;">
-        <h4>Person - Edit</h4>
+    <div class="card-header bg-danger text-white text-center mb-2 pt-0" style="height:25px;">
+        <h1>Person - Edit</h1>
     </div>
     <div class="card-body">
         <form enctype="multipart/form-data" method="post" asp-action="Edit">
