--- a/WebMVCApplKamPublic/Views/Persons/Create.cshtml
+++ b/WebMVCApplKamPublic/Views/Persons/Create.cshtml
@@ -19,8 +19,10 @@
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                         <div class="form-group col-6">
+                            <!-- asp-for jsou tag helpers generující vhodné ovládací prvky -->
                             <label asp-for="Name" class="control-label"></label>
                             <input asp-for="Name" class="form-control" />
+                            <!-- Výpis chybové hlášky -->
                             <span asp-validation-for="Name" class="text-danger"></span>
                         </div>
 
