--- a/WebMVCApplKamPublic/Views/Shared/_Layout.cshtml
+++ b/WebMVCApplKamPublic/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="author" content="WebMVCAppKamPublic" />
     <title>@ViewData["Title"] - WebMVCApplKamPublic</title>
     <link rel="icon" type="image/x-icon" href="~/images/logo.png" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
@@ -35,6 +35,16 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Persons" asp-action="Index">Seznam osob</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-light" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Zboží</a>
+                            <div class="dropdown-menu" style="background:linear-gradient(to right, #464649, #203E70);">
+                                <a class="nav-link text-light" asp-area="" asp-controller="PriceViewModel" asp-action="IndexCheckBox">Výběr z checkboxu</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="PriceViewModel" asp-action="Index">Seznam zboží</a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="User" asp-action="Index">Seznam uživatelů</a>
                         </li>
                     </ul>
                 </div>
